# yew-nim-game

./: Cargo.toml  README.md  index.html  tailwind.config.js
src/: app.css  lib.rs  main.rs  minimax.rs
src/app/: crab.rs  mod.rs
src/components/: game_result.rs  layout.rs  mod.rs
